On removing a directory make sure the leaf directory doesn't have a valid '..' link anymore. In a corner case this leaf can be held by a process as a CWD. It is guaranteed to be empty at this stage so we trunc it removing the only valid FID, being the '..' entry.

Solves part of PR kern/47987
Solves tests/vfs/t_vnops udf_dir_rmdirdotdot